--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -35,8 +35,7 @@
         <ImageView
             android:id="@+id/imgchitiet"
             android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:src="" />
+            android:layout_height="200dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
