--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,120 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
+
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toobarmanhinhchinh"
-                android:background="#FFFFFF"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:background="#FFFFFF"
                 app:title="Trang chủ">
+
                 <LinearLayout
-                    android:layout_gravity="right"
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
+
                     <EditText
                         android:id="@+id/edt_timkiem"
-                        android:focusable="false"
                         android:layout_width="230dp"
                         android:layout_height="match_parent"
-                        android:hint="@string/hint_search_short"
-                        android:padding="10dp"
-                        android:drawableRight="@drawable/ic_baseline_search_24"
+                        android:layout_margin="5dp"
                         android:background="@drawable/custom_edittext"
-                        android:layout_margin="5dp"/>
+                        android:drawableRight="@drawable/ic_baseline_search_24"
+                        android:focusable="false"
+                        android:hint="@string/hint_search_short"
+                        android:padding="10dp" />
 
                     <ImageView
                         android:id="@+id/iv_ic_cart_24"
-                        android:src="@drawable/ic_cart_24"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"/>
+                        android:src="@drawable/ic_cart_24" />
 
                 </LinearLayout>
 
             </androidx.appcompat.widget.Toolbar>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="15dp">
-            <ViewFlipper
-                android:id="@+id/viewlipper"
-                android:layout_width="match_parent"
-                android:layout_height="200dp">
-                <ImageView
+
+                <ViewFlipper
+                    android:id="@+id/viewlipper"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/promobanner1"
-                    android:scaleType="centerCrop"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/promobanner2"
-                    android:scaleType="centerCrop"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/promobanner3"
-                    android:scaleType="centerCrop"/>
-            </ViewFlipper>
+                    android:layout_height="200dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/promobanner1" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/promobanner2" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/promobanner3" />
+                </ViewFlipper>
             </androidx.cardview.widget.CardView>
+
             <LinearLayout
-                android:background="#E1FFFFFF"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:textSize="25sp"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="#070000"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/calibri"
-                    android:text="Sách mới nhất"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"
+                android:background="#E1FFFFFF"
+                android:orientation="vertical">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerview"
-                    android:layout_marginVertical="10dp"
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
-                </androidx.recyclerview.widget.RecyclerView>
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Mới Nhất" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Thịnh Hành" />
+                </com.google.android.material.tabs.TabLayout>
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewpager2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
 
             </LinearLayout>
         </LinearLayout>
+
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationview"
-            android:layout_gravity="start"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="start"
             app:menu="@menu/navigation_menu_left">
-<!--            <ListView-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:id="@+id/listviewmanhinhchinh"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"/>-->
+            <!--            <ListView-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:id="@+id/listviewmanhinhchinh"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"/>-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="123"/>
+                android:text="123" />
         </com.google.android.material.navigation.NavigationView>
     </androidx.drawerlayout.widget.DrawerLayout>
 
