--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,41 +18,45 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toobarmanhinhchinh"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="#FFFFFF"
-                app:title="Trang chủ">
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                android:weightSum="5">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
-                    android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/iv_ic_baseline_menu_24"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_baseline_menu_24" />
 
-                    <EditText
-                        android:id="@+id/edt_timkiem"
-                        android:layout_width="230dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="5dp"
-                        android:background="@drawable/custom_edittext"
-                        android:drawableRight="@drawable/ic_baseline_search_24"
-                        android:focusable="false"
-                        android:hint="@string/hint_search_short"
-                        android:padding="10dp" />
+                <EditText
+                    android:id="@+id/edt_timkiem"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="3"
+                    android:background="@drawable/custom_edittext"
+                    android:drawableRight="@drawable/ic_baseline_search_24"
+                    android:focusable="false"
+                    android:hint="@string/hint_search_short"
+                    android:padding="10dp" />
 
-                    <ImageView
-                        android:id="@+id/iv_ic_cart_24"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_cart_24" />
+                <ImageView
+                    android:id="@+id/iv_ic_cart_24"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_cart_24" />
 
-                </LinearLayout>
-
-            </androidx.appcompat.widget.Toolbar>
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -110,7 +114,7 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewpager2"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
         </LinearLayout>
@@ -121,15 +125,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:menu="@menu/navigation_menu_left">
-            <!--            <ListView-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:id="@+id/listviewmanhinhchinh"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"/>-->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="123" />
+
         </com.google.android.material.navigation.NavigationView>
     </androidx.drawerlayout.widget.DrawerLayout>
 
