--- a/app/src/main/res/menu/navigation_menu_left.xml
+++ b/app/src/main/res/menu/navigation_menu_left.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_shop_loc"
-        android:title="Shop's Location"/>
+        android:title="Shop's Location"
+        android:icon="@drawable/ic_baseline_login_24"/>
     <item android:id="@+id/nav_account"
         android:title="My Account"/>
     <item android:id="@+id/nav_settings"
