--- a/app/src/main/res/menu/navigation_menu_left.xml
+++ b/app/src/main/res/menu/navigation_menu_left.xml
@@ -2,11 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_shop_loc"
         android:title="Shop's Location"
-        android:icon="@drawable/ic_baseline_login_24"/>
+        android:icon="@drawable/ic_baseline_location_on_24"/>
     <item android:id="@+id/nav_account"
-        android:title="My Account"/>
+        android:title="My Account"
+        android:icon="@drawable/ic_baseline_account_circle_24"/>
+    <item android:id="@+id/nav_message"
+        android:title="Help center"
+        android:icon="@drawable/ic_baseline_message_24"/>
     <item android:id="@+id/nav_settings"
-        android:title="Settings"/>
+        android:title="Settings"
+        android:icon="@drawable/ic_baseline_settings_24"/>
     <item android:id="@+id/nav_logout"
-        android:title="Logout"/>
+        android:title="Logout"
+        android:icon="@drawable/ic_baseline_login_24"/>
 </menu>
