--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,7 @@
     tools:context=".activity.MainActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawerlayout"
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
@@ -33,7 +34,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_baseline_menu_24" />
+                    android:src="@drawable/ic_baseline_menu_24"
+                    android:contentDescription="@string/desc_navigation" />
 
                 <EditText
                     android:id="@+id/edt_timkiem"
@@ -45,7 +47,9 @@
                     android:drawableRight="@drawable/ic_baseline_search_24"
                     android:focusable="false"
                     android:hint="@string/hint_search_short"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:importantForAutofill="no"
+                    android:inputType="none" />
 
                 <ImageView
                     android:id="@+id/iv_ic_cart_24"
@@ -54,7 +58,8 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:src="@drawable/ic_cart_24" />
+                    android:src="@drawable/ic_cart_24"
+                    android:contentDescription="@string/desc_cart" />
 
             </LinearLayout>
 
@@ -73,20 +78,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/promobanner1" />
+                        android:src="@drawable/promobanner1"
+                        android:contentDescription="@string/desc_promo" />
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/promobanner2" />
+                        android:src="@drawable/promobanner2"
+                        android:contentDescription="@string/desc_promo" />
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/promobanner3" />
+                        android:src="@drawable/promobanner3"
+                        android:contentDescription="@string/desc_promo" />
                 </ViewFlipper>
+
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -103,12 +112,12 @@
                     <com.google.android.material.tabs.TabItem
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Mới Nhất" />
+                        android:text="@string/tab_new" />
 
                     <com.google.android.material.tabs.TabItem
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Thịnh Hành" />
+                        android:text="@string/tab_popular" />
                 </com.google.android.material.tabs.TabLayout>
 
                 <androidx.viewpager2.widget.ViewPager2
@@ -117,16 +126,16 @@
                     android:layout_height="match_parent" />
 
             </LinearLayout>
+
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigationview"
+            android:id="@+id/navigationView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:menu="@menu/navigation_menu_left">
+            app:menu="@menu/navigation_menu_left"/>
 
-        </com.google.android.material.navigation.NavigationView>
     </androidx.drawerlayout.widget.DrawerLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
