--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,8 +13,7 @@
         android:background="#FFFFFF"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="?attr/actionBarSize" />
 
     <EditText
         android:id="@+id/edtsearch"
@@ -25,7 +25,7 @@
         android:background="@drawable/custom_edittext"
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/toobar"
-        />
+        android:textColorHint="#616161" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview_search"
@@ -35,6 +35,6 @@
         app:layout_constraintTop_toBottomOf="@+id/edtsearch"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
